--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Stefanie Colino
 description: DREAM Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: "{{ site.baseurl }}/images/csedu.JPG"
 
 #
 # Flags below are optional
