--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Stefanie Colino
+name: CS for All
 
 # Short bio or description (displayed in the header)
-description: DREAM Project
+description: My 2024 DREAM Project focused on undergraduate CS curricular analytics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/scolino/scolino.github.io/blob/main/images/csedu.jpg
