--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: CS for All
 description: My 2024 DREAM Project focused on undergraduate CS curricular analytics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/scolino/scolino.github.io/blob/main/images/csedu.jpg
+avatar: https://avatars.githubusercontent.com/u/22007558?v=4
 
 #
 # Flags below are optional
