--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: CS for All
+name: CS for Everyone
 
 # Short bio or description (displayed in the header)
 description: My 2024 DREAM Project focused on undergraduate CS curricular analytics
